# FastAPI-clinic

./: .gitignore  main.py  pyproject.toml
core/: config.py  database.py
src/appointments/: models.py
src/auth/: models.py  routers.py  users.py
src/cabinets/: models.py
src/clinics/: models.py
src/doctors/: models.py
src/patients/: models.py
src/services/: models.py
